--- a/package.json
+++ b/package.json
@@ -8,14 +8,30 @@
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.11.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
-    "mongoose": "^5.2.10",
+    "imdb-api": "^4.0.2",
+    "mongodb": "^3.1.4",
+    "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
+    "multer": "^1.3.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^4.6.8",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "seed-js": "0.0.11",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
