--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "connect-ensure-login": "^0.1.1",
@@ -26,6 +27,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "node": "^10.10.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
